kubernetes/apps/media/prowlarr/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: media
  annotations:
    external-dns.k8s.io/audience: internal
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Prowlarr"
    gethomepage.dev/description: "Indexer manager"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=prowlarr"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "prowlarr.svg"
    gethomepage.dev/href: "https://prowlarr.lab.supermorphic.com"
spec:
  hostnames:
    - prowlarr.lab.supermorphic.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: prowlarr
          port: 9696
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
